@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2024-04-24T16:14:34Z",
+  "timestamp" : "2024-04-25T00:57:38Z",
   "count_outdated" : 231,
   "uniques_outdated" : 166,
-  "count" : 232,
+  "count" : 233,
   "uniques" : 167,
   "clones" : [
     {
       "timestamp": "2024-04-24T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
