@@ -1,10 +1,10 @@
 {
-  "count": 1,
+  "count": 2,
   "uniques": 1,
   "clones": [
     {
       "timestamp": "2024-04-24T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
